Code cleanup and get swagger to work again; add gradle to project